# Agentic_LifeCoach_System

./: .gitignore  app.py  main.py  pyproject.toml  test_google_auth.py
LifeCoach_Data/Active/Luis_Zermeno/Session_1_17-12-2025/: summary.txt  transcription.txt
LifeCoach_Data/Templates/: homework_template.docx  next_session_template_llmready.docx  session_template.docx  summary_template_llmready.docx
agents/: __init__.py  agents.py  prompts.yaml
audio_tests/: .gitignore  README.md  test_openai_diarize.py  test_parakeet_pyannote.py  test_voxtral_pyannote.py
audio_tests/audio_sample/: .gitkeep
audio_tests/test_results/: COMPARISON_SHORT_sample.txt  openai_20251221_092744_audio_example_SHORT.txt  parakeet_pyannote_20251221_110939_audio_example_SHORT.txt  voxtral_pyannote_20251221_091032_audio_example_SHORT.txt
config/: __init__.py  constants.py  globals.py  paths.py
functions/: __init__.py  agent_tools.py  helper_functions.py  logger.py  retriever_tool.py  transcription_deepgram.py
