[project]
name = "lifecoach-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=1.1.0",
    "langchain-google-community>=3.0.1",
    "langchain-google-genai>=3.2.0",
    "python-dotenv>=1.2.1",
    "unstructured>=0.18.21",
    "streamlit>=1.40.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.1",
    "parakeet-mlx>=0.4.1",
    "pyannote-audio>=4.0.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "deepgram-sdk>=5.3.0",
    "pdfplumber>=0.11.8",
    "langchain-huggingface>=1.2.0",
]
